# Graphian

./: .gitignore  LICENSE  graphian_v1_spec.md  pyproject.toml  やりたいこと.md  計画
genesys/: genesys.py
genesys/mod/: first_genesys.py
graphian/: __init__.py  orchestrator.py
graphian/core/: __init__.py  buffer.py  genome.py  geometry.py  network.py  session.py
graphian/development/: README.md  __init__.py  base.py  dummy.py
graphian/environments/: README.md  __init__.py  base.py  phototaxis_1d.py
graphian/persistence/: __init__.py  config.py  logging_setup.py  snapshot.py
graphian/ui/: __init__.py  cli.py
graphian/ui/web/: app.js  index.html
graphian/viz/: __init__.py  server.py
tests/: test_dummy.py  test_genome.py  test_geometry.py
